# METIS-Thinking-about-the-model

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DGX_TRANSITION_CONTEXT.md  DPO_Off_Policy_Academic_Report.md  DPO_Training_Troubleshooting_Report.md  README.md  REPRODUCIBILITY.md  bench_native.py  dashboard.py  demo_metis.py  demo_reward.py  fetch_extended_prompts.py  format_orca_for_metis.py  future.md  prepare_external_dpo.py  pyproject.toml  report_summary.py  requirements.txt  restart_train_eval.sh  resume_experiment.py  run_assimilated_dpo.sh  run_eval_only.sh  run_experiment.py  run_external_dpo.sh  run_full_1000.sh  run_restructured_pipeline.sh  sedac_v9_demo.py  sedac_v9_test.py  start_all.sh  test_chat_real.py  test_inference.py  test_metacognitive.py  test_native.py  test_ollama_sedac.py  test_sedac_math_core.py  vllm_batch_generate.py  vllm_serve.sh  wait_and_eval.sh  wait_and_run_pipeline.sh  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
archive/: __init__.py
benchmark_results/: benchmark_results.json
configs/: dgx_7b.yaml  dgx_full.yaml
dashboard/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
dgx/: README.md  __init__.py  grpo_train.py  parallel_search.py  triton_config.pbtxt  vllm_processor.py
docs/: HARDWARE_STRATEGY.md  METIS_AGI_ROADMAP.md  METIS_ENGINEERING_CHALLENGES.md  METIS_METACOGNITION.md  METIS_PHILOSOPHY.md  METIS_TECHNICAL_OVERVIEW.md  UNIVERSAL_SCALING_MATRIX.md  showcase_alice_bob_charlie.md
examples/: quick_start.py
metis/: __init__.py  __main__.py  bridge.py  daemon.py  inference.py  metis.py  sentinel.py  serve.py
monitor/: app.py
paper/: main.tex
scripts/: __init__.py
sedac/: __init__.py  auto.py
sedac/v9/kernels/rust_kernels/: Cargo.toml
sedac/v9/kernels/rust_kernels/src/: lib.rs
tests/: test_boundary_entropy.py  test_core_integration.py  test_curiosity_loop.py  test_orchestrator.py
tools/: audit_dpo_pairs.py  build_golden_dataset.py  build_sft_dataset.py  chat_metis.py  cognitive_judge_and_extractor.py  compile_paper.sh  cusum_diagnostic.py  eval_grpo_vs_dpo.py  generate_dpo_pairs_v2.py  grpo_math_train.py  metis_academic_benchmark.py  metis_orthogonal_benchmark.py  metis_router_gateway.py  mmlu_diagnostic.py  phase14_diagnostic.py  phase16_scaling_benchmark.py  phase17_universal_matrix.py  phase19_integration_tests.py  phase20_sentinel_test.py  phase21_adversarial_stress.py  phase22_integration_verify.py  phase23_replay_test.py  phase24_academic_benchmarks.py  qwen32b_probe.py  rebuild_and_retrain_dpo.py  reject_sampling_engine.py  render_pareto_frontier.py  render_token_distribution.py  (+9 more)
(+131 files in other folders)
