[package]
name = "sedac-kernels"
version = "0.1.0"
edition = "2021"
authors = ["SEDAC Team"]
description = "High-performance Rust kernels for SEDAC V9.0"

[lib]
name = "sedac_kernels"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# SIMD and parallel processing
rayon = "1.8"
packed_simd_2 = "0.3"

# Fast math
num-traits = "0.2"
approx = "0.5"

# Memory allocation
aligned-vec = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
